# TimeLight

./: .clang-format  .gitignore  AbstractTimeServiceManager.cpp  AbstractTimeServiceManager.h  CMakeLists.txt  ClockifyManager.cpp  ClockifyManager.h  ClockifyProject.cpp  ClockifyProject.h  ClockifyTrayIcons.cpp  ClockifyTrayIcons.desktop  ClockifyUser.cpp  ClockifyUser.h  ClockifyWorkspace.cpp  ClockifyWorkspace.h  Common.h  HeadlessRunner.cpp  JsonHelper.h  LICENSE  Project.cpp  Project.h  README.md  SelectDefaultProjectDialog.cpp  SelectDefaultProjectDialog.h  SelectDefaultWorkspaceDialog.cpp  SelectDefaultWorkspaceDialog.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  TimeCampManager.cpp  TimeCampManager.h  TimeEntry.cpp  TimeEntry.h  TimeLight.desktop  TimeLight_en_US.ts  TrayIcons.cpp  TrayIcons.h  User.cpp  User.h  (+11 more)
.github/workflows/: build.yml  codeql-analysis.yml  linux-build.yml  macos-build.yml  windows-build.yml
.obs/: workflows.yml
icons/: README.md  macicon.icns
installer/: components.qs  installscript.qs  shortcuts.qs
lang/: TimeLight_en_US.ts
src/: AbstractTimeServiceManager.cpp  AbstractTimeServiceManager.h  ClockifyManager.cpp  ClockifyManager.h  DailyOverviewDialog.cpp  DailyOverviewDialog.h  DeveloperTools.cpp  DeveloperTools.h  JsonHelper.h  Logger.cpp  Logger.h  ModifyJobDialog.cpp  ModifyJobDialog.h  Project.cpp  Project.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SetupFlow.cpp  SetupFlow.h  TeamsClient.cpp  TeamsClient.h  TimeCampManager.cpp  TimeCampManager.h  TimeEntry.cpp  TimeEntry.h  TimeEntryStore.cpp  TimeEntryStore.h  TrayIcons.cpp  TrayIcons.h  User.cpp  User.h  Utils.cpp  Utils.h  Workspace.cpp  Workspace.h  main.cpp  version.h.in
